apps/kube/ingress/manifests/admission-webhook-patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
spec:
  webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    namespaceSelector:
      matchExpressions:
      - key: name
        operator: NotIn
        values:
        - cert-manager
        - monitoring
        - longhorn-system
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
